# bus-3d-simulator-graophics

./: CMakeLists.txt  README.md
Resources/control/: https___storage_googleapis_com_ai_services_quality_jobs_yrvu7add_input_png.mtl
Resources/lamborghini/: 2021_lamborghini_countach_lpi_800-4.mtl
Resources/person10/: 90s_dad.mtl
Resources/person11/: basketball_player_-_ai_generated.mtl
Resources/person12/: messi_concept.mtl
Resources/person13/: psx_base_-_low_poly_michael_b_jordan.mtl
Resources/person14/: eleventh_doctor.mtl
Resources/person15/: dj_alok.mtl
Resources/person3/: john_wick_roblox_dummy.mtl
Resources/person4/: harry_potter.mtl  zlatan_3d_model_free_football_3d.mtl
Resources/person6/: lowpoly_footballer.mtl
Resources/person7/: a_30_year_old_male_crimelord_wearing_a_black_trenchoat_and_black_boors_and_pants.mtl
Resources/person8/: indian_football_fan.mtl
Resources/person9/: football_pele_cartoon.mtl
Resources/porsche/: free_porsche_911_carrera_4s.mtl
Shaders/: basic.frag
Source/: Main.cpp  Util.cpp  camera.hpp  model.hpp
